--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="background-color: #2c3e50; border-radius: 15px; padding: 30px; text-align: center; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); width: 350px;">
         <!-- Judul dengan efek warna -->
         
-        <a style="color: #ecf0f1; font-size: 16px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 0px;">XXXXXXX</a>
+        <a style="color: #ecf0f1; font-size: 16px; font-weight: bold; margin-bottom: 15px; text-transform: uppercase; letter-spacing: 0px;">She's so me coded with that look on her face😭🤣</a>
 
         <!-- Tombol Alternatif -->
         <div>
@@ -21,8 +21,7 @@
                     🔗Alternative 1🔗
                 </button>
             </a>
-
-            <a href="https://amplify-video-tv.github.io/1FWcq1XL1.mp4" target="_blank" style="text-decoration: none;">
+            <a href="https://amplify-video-tv.github.io/qLg9zuyD1.mp4" target="_blank" style="text-decoration: none;">
                 <button style="background-color: #FFFFFF; color: black; border: none; padding: 15px 20px; margin: 10px 0; border-radius: 25px; width: 100%; font-size: 18px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); transition: transform 0.2s;">
                     🔗Alternative 2🔗
                 </button>
